@@ -12,11 +12,11 @@ my $calc = Convos::Plugin::Bot::Action::Calc->new;
 
 $calc->register($t->app->bot, {});
 
-is $calc->reply({command => 'calc 2 + 2'}),              '2 + 2 = 4',                 'calc 2 + 2';
-is $calc->reply({command => 'calc rm -rf .'}),           'Invalid function "rm"',     'rm';
-is $calc->reply({command => 'calc system("rm -rf .")'}), 'Invalid function "system"', 'system rm';
-is $calc->reply({command => 'calc 10 / 0'}), 'Error in function "/": Illegal division by zero',
+is $calc->reply({message => 'calc 2 + 2'}),              '2 + 2 = 4',                 'calc 2 + 2';
+is $calc->reply({message => 'calc rm -rf .'}),           'Invalid function "rm"',     'rm';
+is $calc->reply({message => 'calc system("rm -rf .")'}), 'Invalid function "system"', 'system rm';
+is $calc->reply({message => 'calc 10 / 0'}), 'Error in function "/": Illegal division by zero',
   'calc 10 / 2';
-is $calc->reply({command => 'calc: sqrt(4)'}), 'sqrt(4) = 2', 'calc sqrt(4)';
+is $calc->reply({message => 'calc: sqrt(4)'}), 'sqrt(4) = 2', 'calc sqrt(4)';
 
 done_testing;
